# ft8-gpt5

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
.tmp/: short_summary.txt
ft8dec/: __init__.py  constants.py  crc14.py  decoder.py  demod.py  io.py  ldpc.py  ldpc_data.py  sync.py  types.py
ft8dec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: compute_dataset_metrics.py  debug_decode_llr.py  debug_decode_one.py  extract_ldpc_from_ft8lib.py  fetch_dataset.sh  setup_env.sh
src/ft8gpt/: __init__.py  api.py  constants.py  crc.py  decoder_e2e.py  demod.py  dsp.py  ft8pack.py  ldpc.py  ldpc_encode.py  ldpc_tables.py  ldpc_tables_embedded.py  message.py  message_decode.py  refine.py  sync.py  synth.py  tones.py  waterfall.py
src/ft8gpt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ft8gpt/char/: __init__.py  channel.py  metrics.py  run_char.py  runner.py  scenarios.py  synth_utils.py
tests/: perf_baseline.json  test_api_smoke.py  test_crc.py  test_crc14.py  test_dataset_compare.py  test_dataset_compare_smoke.py  test_dataset_performance.py  test_dataset_regression.py  test_dataset_short_regression.py  test_dataset_single_ci.py  test_dataset_strong_decode.py  test_e2e_synthetic_strong.py  test_end_to_end_strong.py  test_ft8lib_crosscheck.py  test_full_regression.py  test_llr_ordering.py  test_mapping_harness.py  test_message_pack.py  test_runtime_benchmark.py  test_sync_pipeline_strong.py  test_waterfall_sync_smoke.py
tests/char/: test_cfo_tolerance.py  test_coarse_recall.py  test_fine_sync_accuracy.py  test_ldpc_waterfall.py  test_llr_calibration.py  test_occupancy_recall.py
tmp/: dataset_metrics.json
