[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft8dec"
version = "0.1.0"
description = "Educational FT8 decoder library with tests and benchmarks"
authors = [{name = "FT8 Dev", email = "devnull@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "numba>=0.58",
  "soundfile>=0.12",
  "pytest>=8.0",
  "pytest-benchmark>=4.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
pythonpath = ["."]
filterwarnings = [
  "ignore::DeprecationWarning",
]
