[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft8gpt"
version = "0.1.0"
description = "FT8 decoder from first principles"
authors = [{name="FT8 GPT-5"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "soundfile>=0.12",
  "pytest>=7.4",
  "pytest-benchmark>=4.0.0",
  "pytest-xdist>=3.6.1",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-n auto -m 'not slow'"
markers = [
  "slow: long-running tests",
  "regression: dataset regression tests",
]
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
line-length = 100

[tool.coverage.run]
branch = true
source = ["src/ft8gpt"]

[tool.coverage.report]
show_missing = true


